# Classifiaction-Quality-Coffee-beans

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
src/: buildmodel.ipynb
src/History/: history_custom_cnn.csv  history_mobilenetv2.csv  history_resnet50v2.csv
