[project]
name = "UAP-Build_Model"
version = "0.1.0"
description = "()"
authors = [
    {name = "haidarfaizul", email = "haidarfaizul7@gmail.com"},
]
dependencies = []
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
